    rabin_to_buchi_maybe() that converts a Rabin-like automaton into a
    Büchi automaton only if the resulting Büchi automaton can keep the
    same transition structure (where the ..._maybe() variant would
    modify the Rabin automaton if needed).

  - to_parity() has been rewritten now combines several strategies for
    paritizing automata with any acceptance condition.

  Backward-incompatible changes:

  - iar() and iar_maybe() have been moved from
    spot/twaalgos/rabin2parity.hh spot/twaalgos/toparity.hh and marked
    as deprecated, they should be replaced by to_parity().  In case
    the input is Rabin-like or Streett-like, to_parity() should be at
    least as good as iar().

  - The twa_graph::is_alternating() and digraph::is_alternating() methods,
    deprecated in Spot 2.3.1 (2017-02-20), have been removed.

  Bugs fixed:

  - Relabeling automata could introduce false edges.  Those are now
    removed.

  - Emptiness checks, and scc_info should now ignore edges labeled
    with false.

  - relabel_bse() could incorrectly relabel Boolean subformulas that
    had some atomic propositions in common.

New in spot 2.8.7 (2020-03-13)

  Bugs fixed:

  - Building a product between two complete automata where one operand
    had false acceptance could create an incomplete automaton
    incorrectly tagged as complete, causing the print_hoa() function
    to raise an exception.

  - autfilt --uniq was not considering differences in acceptance
    conditions or number of states when discarding automata.

  - In an automaton with acceptance condition containing some Fin, and
    whose accepting cycle could be reduced to a self-loop in an
    otherwise larger SCC, the generation of an accepting run could be
    wrong.  This could in turn cause segfaults or infinite loops while
    running autcross or autfilt --stats=%w.

  - The generic emptiness check used a suboptimal selection of "Fin"
    to remove, not matching the correct line in our ATVA'19 paper.